Bug 217575 - Auto select pasted files doesn't select all files if some have been skipped
Summary: Auto select pasted files doesn't select all files if some have been skipped
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1
Platform: Chakra Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-06 13:54 UTC by FiNeX
Modified: 2012-12-06 09:20 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2009-12-06 13:54:24 UTC
Reproducible using KDE SC 4.3.81 (from OpenSuse 11.2 snapshot packages).

1) start dolphin
2) split it (so it is more easy to reproduce)
3) on the left side open a vfat partition
3.1) create a "test_vfat" directory and open it (still on the left side)
4) on the right side create a "test" directory (so after the test you can delete it)
5) enter the "test" directory and create some files:
5.1) press F4 for the embedded terminal
5.2) # touch {1,2,3,4,4\:a,5,6}
-> you will create seven files one of them have an ":" char which is not accepted for the vfat filesystem, this is needed to trigger the bug)
5.3) close the terminal
6) cut or copy the created files (on the right side)
7) paste the files to the left, the vfat partition
-> while copying dolphin will inform you that it is impossible to write on the destination fodler (thanks to the illegal vfat char used before).
8) press "skip all"
-> the copy will finish and all files (expept "4:a") are copied.

* and now let's see the bug *

-> usually copied files are selected automatically, this time only the first set (copied before the "skip/skip all/.." dialog) is selected. Only files "1", "2", "3" and "4" are selected, "5" and "6" aren't.

I hope to have clearly explained the bug. 

Bye :-)
Comment 1 Frank Reininghaus 2011-02-13 13:39:46 UTC
Can you still reproduce this bug? I just tried it in master, and the selection works fine for me.
Comment 2 Matthias Fuchs 2011-05-27 21:07:03 UTC
I can still reproduce this with trunk.
Comment 3 Matthias Fuchs 2011-05-27 21:20:21 UTC
Ok the problem is that DolphinView::slotDirListerCompleted() gets called as soon as the files before the "4:a" are copied. Then those get selected and m_newFileNames gets cleared.

At the moment I can't think of a clean solution to this.
Comment 4 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:20:03 UTC
Resetting assignee to default as per bug #305719
Comment 5 Emmanuel Pescosta 2012-11-09 13:54:01 UTC
Git commit b25059e803e7eed54f0593605a4066882d63bce2 by Emmanuel Pescosta.
Committed on 09/11/2012 at 14:52.
Pushed by emmanuelp into branch 'KDE/4.9'.

Fix Bug 217575 - Auto select pasted files doesn't select all files if some have been skipped
REVIEW: 107237
FIXED-IN: 4.9.4

M  +6    -5    dolphin/src/views/dolphinview.cpp

http://commits.kde.org/kde-baseapps/b25059e803e7eed54f0593605a4066882d63bce2
Comment 6 FiNeX 2012-12-06 09:20:11 UTC
Thanks Emmanuel :-)