Fix Bug 217575 - Auto select pasted files doesn't select all files if some have been skipped

BUG: 217575
REVIEW: 107237
FIXED-IN: 4.9.4